@@ -14,7 +14,7 @@ open(FILE,"timezone.txt");
 my $str = <FILE>;
 
 print "package com.maxmind.geoip;\n";
-print "// generated automatically from admin/generate_timeZone.pl";
+print "// generated automatically from admin/generate_timeZone.pl\n";
 print "public class timeZone {\n";
 print "  static public String timeZoneByCountryAndRegion(String country,String region) {\n";
 print "    String timezone = null;\n";
