@@ -1,3 +1,5 @@
+	- Update timeZone.java ( Boris Zentner )
+	- Add missing \n to admin/generate_timeZone.pl ( Boris Zentner )
 	- Fix refresh databaseInfo in combination with GEOIP_CHECK_CACHE
 	  ( Boris Zentner, Glenn Pedersen )
 	- Changed license from GPL to LGPL, to allow commercial programs to include GeoIP API
